--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,11 +46,11 @@ jobs:
         run: |
           echo "Backing up current S3 files..."
           TIMESTAMP=$(date +%Y%m%d%H%M%S)
-          aws s3 sync s3://ssstech-portfolio-website-bucket s3://ssstech-portfolio-website-bucket -$TIMESTAMP
+          aws s3 sync s3://ssstech-portfolio-website-bucket s3://ssstech-portfolio-website-bucket-backup-$TIMESTAMP
 
       - name: Sync files to S3
         run: |
-          aws s3 sync ./website s3://ssstech-portfolio-website-bucket  --delete
+          aws s3 sync ./website s3://ssstech-portfolio-website-bucket --delete
 
       - name: Invalidate CloudFront
         run: |
@@ -74,11 +74,10 @@ jobs:
         run: |
           echo "Deploy failed. Rolling back to backup..."
           # Find the latest backup folder
-          LATEST_BACKUP=$(aws s3 ls s3://ssstech-portfolio-website-bucket -backup/ | sort | tail -n 1 | awk '{print $2}')
+          LATEST_BACKUP=$(aws s3 ls | grep ssstech-portfolio-website-bucket-backup | sort | tail -n 1 | awk '{print $4}')
           echo "Restoring backup: $LATEST_BACKUP"
-          aws s3 sync s3://ssstech-portfolio-website-bucket-backup/$LATEST_BACKUP s3://ssstech-portfolio-website-bucket  --delete
+          aws s3 sync s3://$LATEST_BACKUP s3://ssstech-portfolio-website-bucket --delete
           # Invalidate CloudFront again after rollback
           aws cloudfront create-invalidation \
             --distribution-id ${{ secrets.CLOUDFRONT_DIST_ID }} \
             --paths "/*"
-
